--- a/FarAwayApp/FarAwayApp.Android/Properties/AndroidManifest.xml
+++ b/FarAwayApp/FarAwayApp.Android/Properties/AndroidManifest.xml
@@ -4,5 +4,5 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-	<application android:label="FarAwayApp.Android"></application>
+	<application android:label="FarAwayApp.Android" android:icon="@mipmap/faraway_black"></application>
 </manifest>
