Ajout font mainpage

--- a/FarAwayApp/FarAwayApp.Android/FarAwayApp.Android.csproj
+++ b/FarAwayApp/FarAwayApp.Android/FarAwayApp.Android.csproj
@@ -65,9 +65,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\bahnschrift.ttf" />
+    <AndroidAsset Include="Assets\Spaceport.otf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
-    <None Include="Properties\AndroidManifest.xml" />
+    <None Include="Properties\AndroidManifest.xml">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Tabbar.axml" />
